--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1324,13 +1324,19 @@
         }
 
         #random-move-btn {
-            background-color: #ff8c00;
-            color: #fff;
+            background: transparent;
+        }
+
+        #random-move-btn i {
+            color: #ff8c00;
         }
 
         #random-move-btn:hover {
-            background-color: #ff7f00;
-            color: #fff;
+            background-color: #007bff;
+        }
+
+        #random-move-btn:hover i {
+            color: #ff8c00;
         }
 
         td:last-child {
