--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -4429,7 +4429,8 @@
                     fr = num;
                 }
 
-                // Обрабатываем каждый сегмент пути
+                // Обрабатываем каждый сегмент пути (prev и lastToInPart — в области видимости части)
+                let lastToInPart = fr;
                 for (let i = 0; i < count; i++) {
                     let prev = fr;
                     for (let j = 1; j < segments.length; j++) {
@@ -4459,6 +4460,7 @@
                             hit: hitSeg
                         });
                         prev = to;
+                        lastToInPart = to;
                     }
                 }
 
@@ -4474,9 +4476,9 @@
                 }
 
                 if (hit && moves.length > 0) {
-                    // Находим последний ход с этой конечной позицией
+                    // Находим последний ход с этой конечной позицией (хит в конце части, напр. 7/2* или 13/7/2*)
                     for (let i = moves.length - 1; i >= 0; i--) {
-                        if (moves[i].to === prev) {
+                        if (moves[i].to === lastToInPart) {
                             moves[i].hit = true;
                             break;
                         }
