--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1324,19 +1324,19 @@
         }
 
         #random-move-btn {
-            background: transparent;
+            background-color: #ff8c00;
         }
 
         #random-move-btn i {
-            color: #ff8c00;
+            color: white;
         }
 
         #random-move-btn:hover {
-            background-color: #007bff;
+            background-color: #e67e00;
         }
 
         #random-move-btn:hover i {
-            color: #ff8c00;
+            color: white;
         }
 
         td:last-child {
